<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="me.akshay.stories.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:context=".ui.login.LoginActivity"
        tools:ignore="smallSp">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/app_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_iv"/>

        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_slogan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_tv"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/semi_white"
            android:text="@string/login_desc"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/google_btn"/>

        <TextView
            android:id="@+id/google_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/google_btn_bg"
            android:textAlignment="center"
            bind:toastMessage="@{viewModel.toastMessage}"
            android:textColor="@color/white"
            android:text="@string/google_btn"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:focusable="true"
            android:clickable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>