<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="me.akshay.stories.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_dp"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_launcher"
                        app:civ_border_color="@color/semi_white"
                        app:civ_border_width="1dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/welcome_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/user_dp"
                        app:layout_constraintTop_toTopOf="@+id/user_dp"
                        app:layout_constraintBottom_toBottomOf="@+id/user_dp"/>

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="32dp"
                        android:ellipsize="end"
                        android:text="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="@+id/welcome_text"
                        app:layout_constraintStart_toEndOf="@+id/welcome_text"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/description_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:layout_marginTop="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/user_dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@string/slider_description"/>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="32dp"
                        app:tabMode="scrollable"
                        app:tabBackground="@drawable/tab_background"
                        app:tabIndicatorGravity="stretch"
                        app:tabIndicator="@drawable/tab_background"
                        app:tabSelectedTextColor="@color/colorPrimary"
                        app:tabIndicatorAnimationMode="elastic"
                        app:tabTextAppearance="@style/TabTextStyle"
                        app:tabIndicatorHeight="0dp"
                        app:tabPaddingBottom="0dp"
                        app:tabPaddingStart="0dp"
                        app:tabPaddingEnd="0dp"
                        app:tabPaddingTop="0dp"
                        android:clipToPadding="true"
                        app:tabGravity="fill"
                        app:layout_constraintTop_toBottomOf="@+id/description_tv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tabs"
                        app:layout_constraintVertical_bias="0.238"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_main_slide" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:layout_margin="28dp"
                    android:text="All Books"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_layout"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bottom_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_main"
                    tools:itemCount="3"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="18dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>